--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <p id=display></p>
         </blockquote>
             
-            <button class = button onclick="newQuote()" id="btn">Generate Message!</button>
+    
+            <a href="something" class="button" onclick= "newQuote()" style=background-color:#f14e4e">Generate Message!</a>
         </div>
     </div>
 
