--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </blockquote>
             
     
-            <a href="something" class="button" onclick= "newQuote()" style=background-color:#f14e4e">Generate Message!</a>
+        <button  class="btn" onclick= "newQuote()" style=background-color:#f14e4e">Generate Message!</button>
         </div>
     </div>
 
